--- a/FRASER_snakemake/workflow/Snakefile
+++ b/FRASER_snakemake/workflow/Snakefile
@@ -10,15 +10,33 @@ mig_file=config["mig_file"]
 input_directory=config["input_directory"]
 file_list=config["file_list"]
 bam_file_directory=config["bam_file_directory"]
+FRASER_type=config["FRASER_type"]
 
 ###########################################---Step 2: Define Rules--##############################################################
+if FRASER_type == "FRASER1":
+    myoutput=config["output_directory"] + "/FRASER1/FRASER_output.csv"
+    myoutput2=config["output_directory"] + "/FRASER_results_description.csv"
+
+if FRASER_type == "FRASER2":
+    myoutput=config["output_directory"] + "/FRASER2/FRASER_output.csv"
+    myoutput2=config["output_directory"] + "/FRASER_results_description.csv"
+
+if FRASER_type == "Both":
+    myoutput=config["output_directory"] + "/FRASER1/FRASER_output.csv"
+    myoutput2=config["output_directory"] + "/FRASER2/FRASER_output.csv"
+    
+
+ruleorder:
+    make_symlinks > create_input_file
+
 rule all:
     input:
         config["input_directory"] + "/FRASER_symlinking_instructions.sh",
         config["output_directory"] + "/FRASER_input.csv",
-        config["output_directory"] + "/FRASER_output.csv",
-        config["output_directory"] + "/FRASER_results_raw.csv",
-        config["output_directory"] + "/FRASER_results_zscores.csv"
+        myoutput,
+        myoutput2
+        #config["output_directory"] + "/FRASER_results_raw.csv",
+        #config["output_directory"] + "/FRASER_results_zscores.csv"
 
 rule make_symlinks: 
     input:
@@ -27,6 +45,9 @@ rule make_symlinks:
         input_directory = config["input_directory"]
     output:
         output_file = config["input_directory"] + "/FRASER_symlinking_instructions.sh"
+    resources:
+        time="96:00:00",
+        mem="236GB"
     shell:"""
         mkdir -p {params.input_directory}
         Rscript scripts/make_symlinks.r  {input.file_list} {params.input_directory}
@@ -52,6 +73,9 @@ rule create_input_file:
         output_directory = config["output_directory"]
     output:
         output_file = config["output_directory"] + "/FRASER_input.csv"
+    resources:
+        time="96:00:00",
+        mem="236GB"
     shell:"""
     mkdir -p {params.output_directory}
     ls {input.input_file}
@@ -66,14 +90,62 @@ rule run_FRASER:
     input:
         input_file = config["output_directory"] + "/FRASER_input.csv"
     params:
-        output_directory = config["output_directory"]
+        output_directory = config["output_directory"] + "/FRASER1"
     output:
-        output_file = config["output_directory"] + "/FRASER_output.csv"
+        output_file = config["output_directory"] + "/FRASER1/FRASER_output.csv"
     resources:
         mem = "1TB",
         time = "96:00:00"
+    conda:
+        '/home/maurertm/micromamba/envs/fraser1'
     shell:"""
     Rscript scripts/FRASER.r {input.input_file} {params.output_directory}
+
+    #Snakemake will error out if you do not do something with the output file in the rule. 
+    #To get around this, I ls the output file
+    ls {output.output_file}
+    echo "rule done"
+    """
+
+rule run_FRASER2:
+    input:
+        input_file = config["output_directory"] + "/FRASER_input.csv"
+    params:
+        output_directory = config["output_directory"] + "/FRASER2",
+        type=config["FRASER_type"],
+        both_output=config["output_directory"] + "/FRASER_results_description.csv"
+    output:
+        output_file = config["output_directory"] + "/FRASER2/FRASER_output.csv"
+    resources:
+        mem = "236GB",
+        time = "96:00:00"
+    conda:
+        '/home/maurertm/micromamba/envs/fraser2'
+    shell:"""
+    Rscript scripts/FRASER2.r {input.input_file} {params.output_directory}
+
+    if [ {params.type} = "Both" ]; then
+        Rscript scripts/FRASER_results_print.r {input.input_file} {params.type} {params.both_output}
+    fi 
+
+    #Snakemake will error out if you do not do something with the output file in the rule. 
+    #To get around this, I ls the output file
+    ls {output.output_file}
+    echo "rule done"
+    """
+
+rule FRASER_results:
+    input:
+        input_file = config["output_directory"] + "/FRASER_input.csv"
+    params:
+        type = config["FRASER_type"]
+    output:
+        output_file = config["output_directory"] + "/FRASER_results_description.csv"
+    resources:
+        time="96:00:00",
+        mem="236GB"
+    shell:"""
+    Rscript scripts/FRASER_results_print.r {input.input_file} {params.type} {output.output_file} 
 
     #Snakemake will error out if you do not do something with the output file in the rule. 
     #To get around this, I ls the output file
